fix problem with array of followers/followed